fixed nav bar on mobile

--- a/styles/About.module.scss
+++ b/styles/About.module.scss
@@ -7,7 +7,6 @@
 
 .about {
     width: 100%;
-    margin-top: -3rem;
 }
 
 .profile {
